<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maxsine</string>
    <string name="roland_ttf">roland.ttf</string>

    <string name="segment_num">段号:</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="status">状态:</string>
    <string name="series">系列:</string>
    <string name="file">文件</string>
    <string name="settings">设置</string>
    <string name="conn">与驱动器通讯</string>
    <string name="lang">语言</string>
    <string name="quit">退出</string>
    <string name="english">英文</string>
    <string name="chinese">中文</string>
    <string name="parameter">参数</string>
    <string name="read">读取</string>
    <string name="write">写入</string>
    <string name="eeprom">EEPROM</string>
    <string name="write_eeprom">写入EEPROM</string>
    <string name="recovery_setings">恢复出厂设置</string>
    <string name="assist_tool">辅助工具</string>
    <string name="ep3_calculator">EP3motion参数计算器</string>
    <string name="path_calculator">参数路径值计算器</string>
    <string name="param_backup">参数备份</string>
    <string name="load_param">加载参数</string>
    <string name="load">加载</string>
    <string name="save_param">保存参数</string>
    <string name="save">保存</string>
    <string name="other_func">其它功能</string>
    <string name="fft">FFT</string>
    <string name="warning">报警</string>
    <string name="firmware_update">固件升级</string>
    <string name="state_monitor">状态监视</string>
    <string name="auto_adjust">自动增益调整</string>
    <string name="coder_zero">调编码器零点</string>
    <string name="set_zero">调零</string>
    <string name="obj_editor">对象编辑器</string>
    <string name="soft2zero">软回零/软限位</string>
    <string name="help">帮助</string>
    <string name="ep1c_help">EP1C增量式的帮助</string>
    <string name="ep1c_a_help">EP1C-A增量式的帮助</string>
    <string name="ep3_st_help">EP3标准式的帮助</string>
    <string name="ep3_io_help">EP3多IO式的帮助</string>
    <string name="install_usb_driver">安装USB驱动</string>
    <string name="version_info">版本信息</string>
    <string name="reboot_effect">重启生效</string>
    <string name="immediately_effect">立即生效</string>
    <string name="read_only">只读状态</string>
    <string name="about">关于</string>
    <string name="copy_right">copyright&#169;2017</string>
    <string name="stop_monitor">停止监视</string>
    <string name="detection">检测</string>

    <string name="conn_dev">连接设备</string>
    <string name="conn_hardware">请连接到硬件设备</string>

    <string name="cancel">取消</string>
    <string name="input_save_name">请输入保存文件名</string>
    <string name="rename_file">有重名文件</string>
    <string name="network_error">网络未连接</string>
    <string name="confirm">确定</string>
    <string name="request_permission_again">申请手机权限，存储介质读写权限</string>
    <string name="null_file_name">文件名不能为空</string>
    <string name="has_same_name">有同名文件</string>
    <string name="choose_one">请选择加载文件</string>
    <string name="period">周期:</string>
    <string name="state_name">状态名称</string>
    <string name="state_value">状态值</string>
    <string name="unit">单位</string>

    <string name="warn_code">报警代码:</string>
    <string name="warn_content">报警内容:</string>
    <string name="warn_reason">报警原因:</string>
    <string name="solution">解决方案:</string>

    <string name="first_trapper">第一陷波器</string>
    <string name="second_trapper">第二陷波器</string>
    <string name="p2_00">P2-00 第1共振陷波器频率:</string>
    <string name="p2_01">P2-01 第1共振陷波器品质因数:</string>
    <string name="p2_02">P2-02 第1共振陷波器深度:</string>
    <string name="p2_03">P2-03 第2共振陷波器频率:</string>
    <string name="p2_04">P2-04 第2共振陷波器品质因数:</string>
    <string name="p2_05">P2-05 第2共振陷波器深度:</string>

    <string name="rigid_hierarchy">刚性等级</string>
    <string name="inertia_ratio">惯量比</string>
    <string name="calcutate_gain">计算增益</string>
    <string name="auto_illation">自动惯量推定</string>
    <string name="read_param">读取参数</string>
    <string name="calcutate_result">计算结果区</string>
    <string name="dayz_content">私服内容区</string>
    <string name="p0_17">P0-17 负载转动惯量比</string>
    <string name="p0_09">P0-09 位置环增益</string>
    <string name="p0_05">P0-05 速度环增益</string>
    <string name="p0_06">P0-06 速度环积分时间常数</string>
    <string name="p0_19">P0-19 速度检测滤波时间常数</string>

    <string name="info_prompt">信息提示</string>
    <string name="dev_disconn">设备连接已断开</string>
    <string name="know">知道了</string>
    <string name="write_error">写入伺服驱动器失败</string>
    <string name="write_eeprom_error">写入EEPROM失败</string>
    <string name="install_usb_error">预安装USB驱动失败</string>
    <string name="set_coder_zero_error">调编码器零点操作失败</string>
    <string name="usb_read_error">USB读取异常</string>
    <string name="illation_error">惯量推定失败</string>

    <string name="quit_prompt">连续两次点击返回退出应用</string>
    <string name="offical">http://www.maxsine.com</string>
    <string name="switch_theme">切换主题</string>

    <!-- Download status -->
    <string name="download_progress">已下载：%1$d&#037;&#037;，速度：%2$skb&#047;s</string>
    <string name="download_status_pause">暂停</string>
    <string name="download_status_be_pause">下载被暂停</string>
    <string name="download_status_re_download">重新下载</string>
    <string name="download_status_again_download">再次尝试</string>
    <string name="download_status_resume">继续下载</string>
    <string name="download_status_finish">下载完成！</string>

    <!-- Download error -->
    <string name="download_error">下载出错了：%1$s</string>
    <string name="download_error_server">服务器数据错误！</string>
    <string name="download_error_network">网络不可用，请检查网络！</string>
    <string name="download_error_storage">存储卡错误，请检查存储卡！</string>
    <string name="download_error_space">存储卡空间不足！</string>
    <string name="download_error_timeout">下载超时！</string>
    <string name="download_error_un_know_host">找不到服务器。</string>
    <string name="download_error_url">URL地址错误。</string>
    <string name="download_error_un">未知错误。</string>

    <!-- error -->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>

    <string-array name="param_name">
        <item>伺服型号</item>
        <item>软件版本</item>
        <item>控制方式</item>
        <item>第1速度环增益</item>
        <item>第1速度环积分时间常数</item>
        <item>第1转矩滤波时间常数</item>
        <item>第1位置环增益</item>
        <item>第2速度环增益</item>
        <item>第2速度环积分时间常数</item>
        <item>第2转矩滤波时间常数</item>
        <item>第2位置环增益</item>
        <item>负载转动惯量比</item>
        <item>速度环PDFF控制系数</item>
        <item>速度检测滤波时间常数</item>
        <item>位置环前馈增益</item>
        <item>位置环前馈滤波时间常数</item>
        <item>速度指令来源</item>
        <item>转矩指令来源</item>
        <item>编码器脉冲因子1</item>
        <item>编码器脉冲因子2</item>
        <item>指令脉冲电子齿轮第1分子</item>
        <item>指令脉冲电子齿轮分母</item>
        <item>指令脉冲电子齿轮第2分子</item>
        <item>指令脉冲电子齿轮第3分子</item>
        <item>指令脉冲电子齿轮第4分子</item>
        <item>指令脉冲输入方式</item>
        <item>指令脉冲输入方向</item>
        <item>指令脉冲输入信号逻辑</item>
        <item>指令脉冲输入信号滤波</item>
        <item>指令脉冲输入滤波模式</item>
    </string-array>

    <string-array name="value_name">
        <!--<item>段号</item>
        <item>参数名称</item>-->
        <item>编号</item>
        <item>最小值</item>
        <item>最大值</item>
        <item>默认值</item>
        <item>当前值</item>
        <item>单位</item>
    </string-array>

    <string name="baudRate">Baud rate</string>
    <string-array name="baud_rate_1">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
        <item>230400</item>
        <item>460800</item>
        <item>921600</item>
        <item>2000000</item>
    </string-array>

    <string-array name="baud_rate_2">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>

    <string-array name="stop_bits">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="data_bits">
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="parity">
        <item>None</item>
        <item>Odd</item>
        <item>Even</item>
        <item>Mark</item>
        <item>Space</item>
    </string-array>

    <string-array name="flow_control">
        <item>None</item>
        <item>CTS/RTS</item>
        <item>DTR/DSR</item>
        <item>XOFF/XON</item>
    </string-array>

    <string-array name="port_list_1">
        <item>0</item>
    </string-array>


    <string-array name="port_list_2">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="port_list_3">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="port_list_4">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="port_list_5">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="port_list_6">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="port_list_7">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="port_list_8">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

</resources>