<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="10dp"
    android:paddingTop="10dp">

    <TextView
        android:id="@+id/tv_state_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/state_name"
        android:textColor="@color/normal_font"
        android:textSize="@dimen/normal_font" />

    <TextView
        android:id="@+id/tv_state_value"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/state_value"
        android:textColor="@color/normal_font"
        android:textSize="@dimen/normal_font" />

    <TextView
        android:id="@+id/tv_state_unit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/unit"
        android:textColor="@color/normal_font"
        android:textSize="@dimen/normal_font" />
</LinearLayout>