<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_fillet_white"
    android:orientation="vertical"
    android:padding="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/warning"
            android:textSize="@dimen/title_font" />

        <ImageButton
            android:id="@+id/ib_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            app:srcCompat="@drawable/ic_close" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider"
        android:background="@color/fillet_stroke" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_code"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />

        <TextView
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Err20"
            android:textColor="@color/warn_code"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_content"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:scrollbars="vertical"
            android:text="EEROM写入时错误"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warn_reason"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />

        <TextView
            android:id="@+id/tv_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:scrollbars="vertical"
            android:text="EEROM芯片损坏"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solution"
            android:textColor="@color/normal_font"
            android:textSize="@dimen/normal_font" />

        <TextView
            android:id="@+id/tv_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:text="重新上电检查故障不消失请更换驱动器！"
            android:textColor="@color/solution"
            android:textSize="@dimen/normal_font" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_know"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg_small_selector"
        android:text="@string/know"
        android:textColor="@color/white"
        android:textSize="@dimen/normal_font" />

</LinearLayout>