<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/fftbg"
    android:orientation="vertical"
    tools:context="com.adrian.servodriver.activities.FFTActivity">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12.5dp">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fft"
            android:textColor="@color/white"
            android:textSize="@dimen/title_font" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_chart"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/shape_fillet_white"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1.0"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_fist_trapper"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_marginTop="5dp"
                android:background="@mipmap/fftbglitle0"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/first_trapper"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_font" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.6"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/p2_00"
                        android:textColor="@color/period"
                        android:textSize="@dimen/normal_font" />

                    <com.adrian.servodriver.views.NumSelector
                        android:id="@+id/ns_p2_00"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_p2_01"
                android:layout_width="249dp"
                android:layout_height="74dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ll_fist_trapper"
                android:background="@mipmap/fftbglittle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/p2_01"
                    android:textColor="@color/period"
                    android:textSize="@dimen/normal_font" />

                <com.adrian.servodriver.views.NumSelector
                    android:id="@+id/ns_p2_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_p2_02"
                android:layout_width="249dp"
                android:layout_height="74dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ll_p2_01"
                android:background="@mipmap/fftbglittle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/p2_02"
                    android:textColor="@color/period"
                    android:textSize="@dimen/normal_font" />

                <com.adrian.servodriver.views.NumSelector
                    android:id="@+id/ns_p2_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_trapper"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:layout_below="@id/ll_p2_02"
                android:layout_marginTop="5dp"
                android:background="@mipmap/fftbglitle0"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:text="@string/second_trapper"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normal_font" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2.6"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/p2_03"
                        android:textColor="@color/period"
                        android:textSize="@dimen/normal_font" />

                    <com.adrian.servodriver.views.NumSelector
                        android:id="@+id/ns_p2_03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_p2_04"
                android:layout_width="249dp"
                android:layout_height="74dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ll_second_trapper"
                android:background="@mipmap/fftbglittle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/p2_04"
                    android:textColor="@color/period"
                    android:textSize="@dimen/normal_font" />

                <com.adrian.servodriver.views.NumSelector
                    android:id="@+id/ns_p2_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_p2_05"
                android:layout_width="249dp"
                android:layout_height="74dp"
                android:layout_alignParentRight="true"
                android:layout_below="@id/ll_p2_04"
                android:background="@mipmap/fftbglittle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/p2_05"
                    android:textColor="@color/period"
                    android:textSize="@dimen/normal_font" />

                <com.adrian.servodriver.views.NumSelector
                    android:id="@+id/ns_p2_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/detection" />

</LinearLayout>
